feat: BRN-06: Few fixes